--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "lucide-react": "^0.344.0",
     "mysql2": "^3.6.5",
     "next": "^14.2.0",
+    "nodemailer": "^7.0.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.18",
